home frag design added with opening gmap in imgview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="start">Start</string>
     <string name="close">Close</string>
+
+    <string name="about_college">Cartoon College is a documentary about a small cartooning school in Vermont (perhaps the more-famous Joe Kubert School in New Jersey would not play ball). Famous (to a comic book fan like your humble reviewer) faces appearing include Stephen R Bissett, Scott McCloud and Art Spiegleman</string>
 </resources>
